# Applied-AI-Group-Projects

./: LICENSE  README.md  dataCleanup.ipynb  data_analysis.ipynb  data_analysis_new.ipynb
.ipynb_checkpoints/: dataCleanup-checkpoint.ipynb  data_analysis.ipynb
aai_project/: .gitignore  pyproject.toml
aai_project/notebooks/: data_analysis.ipynb  test.ipynb
aai_project/notebooks/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
